# reachy-assistant

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc.json  .ruff.toml  .secrets.baseline  .yamllint.yml  CHANGELOG.md  Makefile  README.md  index.html  osv-scanner.toml  package-lock.json  package.json  pyproject.toml
.github/: .dependabot.yml
.github/workflows/: build.yml  dependabot.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 312ffc5e62b2_create_calendar_events_table.py
docs/: Report.md
reachy_assistant/: __init__.py  log_config.py  main.py  settings.py  tracker.py
reachy_assistant/services/: __init__.py  jobs.py  registry.py  scheduler.py  status.py
reachy_assistant/services/calendars/: __init__.py  api.py  event.py  scheduler.py  scraper.py  store.py
reachy_assistant/services/calendars/create-x/: scraper.py
reachy_assistant/services/calendars/create_x/: __init__.py  scraper.py
reachy_assistant/services/calendars/gatech/: __init__.py  event.py  scheduler.py  scraper.py
reachy_assistant/services/calendars/hive/: __init__.py  scraper.py
reachy_assistant/services/research/: __init__.py  arxiv.py
reachy_assistant/services/telegram/: bot.py  command.py  service.py  settings.py
reachy_assistant/services/vision/: __init__.py  tracker.py
tests/unit/: test_main.py  test_settings.py
tests/unit/services/: test_jobs.py  test_registry.py  test_status.py
tests/unit/services/calendars/: test_calendar_store.py
tests/unit/services/calendars/create_x/: test_scraper.py
tests/unit/services/calendars/gatech/: test_scraper.py
