[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
all = [
  {include-group = "ci"},
  {include-group = "lint"},
  {include-group = "test"}
]
ci = [
  "bandit==1.9.3",
  "detect-secrets==1.5.0",
  "licensecheck==2025.1.0",
  "scanoss==1.45.0",
  "tomli>=2.0.1 ; python_version < '3.11'"
]
lint = [
  "codespell==2.4.1",
  "licenseheaders==0.8.8",
  "mypy==1.19.1",
  "pylint==4.0.5",
  "pylint_google_style_guide_imports_enforcing==1.3.1",
  "pyright==1.1.408",
  "ruff==0.15.2",
  "toml-sort==0.24.3",
  "yamllint==1.38.0"
]
test = [
  "coverage==7.13.4",
  "hypothesis==6.151.9",
  "nbmake==1.5.5",
  "pytest-cov==7.0.0",
  "pytest-subtests==0.15.0",
  "pytest-xdist==3.8.0",
  "pytest==9.0.3",
  "pytest-github-actions-annotate-failures==0.4.0"
]

[project]
name = "reachy_assistant"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic==1.13",
  "beautifulsoup4==4.14.3",
  "feedparser==6.0.12",
  "opencv-python==4.13.0.92",
  "playwright==1.58.0",
  "pydantic_settings==2.13.1",
  "reachy-mini[mujoco]==1.6.0",
  "requests==2.33.1",
  "sqlalchemy==2.0.49",
  "ultralytics==8.0"
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_assistant = "reachy_assistant.main:ReachyAssistant"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
reachy_assistant = ["**/*"] # Also include all non-.py files

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools-scm]
write-to = "reachy_assistant/_version.py"
write-to-template = "__version__ = {version!r}"
version-scheme = "guess-next-dev"
local-scheme = "no-local-version"
